<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPopupActivities"
    android:orientation="vertical">
    <!--android:background="#F1F1F1"-->

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/progressbar_job"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">


            <ImageView
                android:id="@+id/finishbutton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:src="@drawable/cancel_imagebutton_popup_activity_pressed" />

            <TextView
                android:id="@+id/txt_categorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categorie"
                android:textColor="@color/colorTitel" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/colorTitel"
                android:popupBackground="@color/colorTitel"/>


            <TextView
                android:id="@+id/txt_untercategorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subcategorie"
                android:textColor="@color/colorTitel" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/categorie_spinner"
                android:layout_marginBottom="20dp"
                android:background="@color/colorTitel"
                android:popupBackground="@color/colorTitel"/>
            <TextView
                android:id="@+id/txt_jobindex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTitel"
                android:text="Index" />

            <EditText
                android:id="@+id/edt_jobindex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textColor="@color/colorText" />


            <TextView
                android:id="@+id/txt_jobcity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTitel"
                android:text="City" />

            <EditText
                android:id="@+id/edt_jobcity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/txt_jobtitel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jobtitel"
                android:textColor="@color/colorTitel" />

            <EditText
                android:id="@+id/edt_jobtitel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/txt_jobdesctipion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Job_description"
                android:textColor="@color/colorTitel" />

            <EditText
                android:id="@+id/edt_jobdiscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:textColor="@color/colorText" />

            <EditText
                android:id="@+id/edt_startdateClickText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:width="40sp"
                android:background="@color/colorTitel"
                android:focusableInTouchMode="false"
                android:text="@string/start_date"
                android:textColor="@color/colorText"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edt_enddateClickText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:width="40sp"
                android:background="@color/colorTitel"
                android:focusableInTouchMode="false"
                android:text="@string/end_date"
                android:textColor="@color/colorText"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/createPhoto1"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:layout_weight="1"
                    android:src="@drawable/createphotoselector" />

                <ImageView
                    android:id="@+id/createPhoto2"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:layout_weight="1"
                    android:src="@drawable/createphotoselector" />

                <ImageView
                    android:id="@+id/createPhoto3"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:layout_weight="1"
                    android:src="@drawable/createphotoselector" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_savejob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/btn_save_job" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/photo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/photo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/photo3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>
</RelativeLayout>