<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:minHeight="?android:attr/actionBarSize"
    android:orientation="horizontal"
    android:overScrollMode="always"
    android:paddingEnd="8dp">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMain"
        tools:context="com.example.dimitri.helpdeal.azureClasses.activities.Register_activity">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/login_image"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/loadingProgressBar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="52dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.117" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="276dp"
            android:layout_height="54dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <AutoCompleteTextView
                android:id="@+id/input_firstname"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/singIn_firstname"
                android:inputType="text"
                android:textColor="@color/colorText"
                android:textColorHint="@color/button_selectorcolor"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="276dp"
            android:layout_height="54dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <AutoCompleteTextView
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/singIn_name"
                android:inputType="text"
                android:textColor="@color/colorText"
                android:textSize="15dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="276dp"
            android:layout_height="54dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <AutoCompleteTextView
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/singIn_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorText"
                android:textSize="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="276dp"
            android:layout_height="54dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <AutoCompleteTextView
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/singIn_password"
                android:inputType="textPassword"
                android:textColor="@color/colorText"
                android:textColorHint="@color/black"
                android:textSize="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_email" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="276dp"
            android:layout_height="54dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/textInputLayout5">

            <AutoCompleteTextView
                android:id="@+id/input_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/singIn_confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/colorText"
                android:textSize="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_password" />
        </android.support.design.widget.TextInputLayout>

       <android.support.design.widget.TextInputLayout
            android:layout_width="276dp"
            android:layout_height="54dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
           app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
           android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
           android:layout_marginTop="8dp"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
           android:id="@+id/textInputLayout6">

           <AutoCompleteTextView
               android:id="@+id/input_phone"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:ems="10"
               android:hint="Phone"
               android:inputType="numberSigned"
               android:textSize="15dp"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               tools:layout_editor_absoluteY="8dp" />
       </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="276dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:text="@string/singIn_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/link_to_google_signin"
            android:layout_width="250dp"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="Do you have a google account ? Sing in"
            android:textColor="@color/colorText"
            android:textSize="16dip"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>